--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.idea
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -10,3 +12,4 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
